# CPP-Game-Laboratory

./: .gitignore  CMakeLists.txt
games/: CMakeLists.txt
games/SnakeBasic/: SnakeBasic.sln  SnakeBasic.vcxproj  main.cpp
games/battleships/: CMakeLists.txt  answers.md
games/battleships/battleships_buggy/: CMakeLists.txt
games/battleships/battleships_buggy/vs/battleships_buggy/: battleships_buggy.sln  battleships_buggy.vcxproj  battleships_buggy.vcxproj.filters
games/battleships/battleships_good/: CMakeLists.txt
games/battleships/battleships_good/apps/battleships_cli/: main.cpp
games/battleships/battleships_good/tests/: core_tests.cpp
